yaml/docker-registry-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: deployment-docker-registry
  labels:
    name: docker-registry
  namespace: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: pvc-nfs-docker-registry
      containers:
        - name: docker-registry
          image: registry:2.6.2
          imagePullPolicy: IfNotPresent
          ports:
          - name: http
            containerPort: 5000
            protocol: TCP
          volumeMounts:
          - name: storage
            mountPath: /var/lib/registry
---
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  namespace: docker-registry
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: docker-registry
