yaml/traefik-alertmanager.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-alertmanager
  namespace: monitoring
spec:
  rules:
  - host: alertmanager.rasp-cluster.local
    http:
      paths:
      - path: /
        backend:
          serviceName: alertmanager-main
          servicePort: 9093
