yaml/traefik-grafana.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-grafana
  namespace: monitoring
spec:
  rules:
  - host: grafana.rasp-cluster.local
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
